test/must_fail/file_write_3_args.ref
error: file_write(path,data) require exactly 2 arguments but 3 was given
  [file_write_3_args.ngjs:0:0] in <anonymous>()
    file_write('/1.json', 'asdf', 'asdf');
    ^

hint: function 'file_write(path,data)' was called with 3 arguments
hint: argument #0 was /1.json (string)
hint: argument #1 was asdf (string)
hint: argument #2 was asdf (string)

Stack trace (1 frames):
  [file_write_3_args.ngjs:0:0] in <anonymous>()
    file_write('/1.json', 'asdf', 'asdf');
    ^

exit(7)
