test/must_fail/file_write_3_args.ngjs
#!/usr/bin/env ngspicejs
// File write needs 2 arguments
// linter: ngspicejs-lint
"use strict";

file_write('/1.json', 'asdf', 'asdf');
